<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserDetailsActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/image_user"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/artist_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/title_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/label_username"
        app:layout_constraintTop_toBottomOf="@+id/image_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text"
        app:layout_constraintTop_toBottomOf="@+id/title_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_reputation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/label_reputation"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp" />

    <TextView
        android:id="@+id/reputation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text"
        app:layout_constraintTop_toBottomOf="@+id/title_reputation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_badge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/label_badge"
        app:layout_constraintTop_toBottomOf="@+id/reputation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/badge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text"
        app:layout_constraintTop_toBottomOf="@+id/title_badge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/label_location"
        app:layout_constraintTop_toBottomOf="@+id/badge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text"
        app:layout_constraintTop_toBottomOf="@+id/title_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_creation_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/label_creation_date"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text"
        app:layout_constraintTop_toBottomOf="@+id/title_creation_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>